<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btn_add_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_player"
            android:textAlignment="center"/>

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btn_credit_top_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit_top_up"
            android:textAlignment="center"
            />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btn_view_all_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_all_players"
            android:textAlignment="center"
            />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btn_play_a_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_a_game"
            android:textAlignment="center"/>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>